# e2e_voice

./: CMakeLists.txt  README.md  asr_demo.py  build.sh  requirements.txt
asr/: __init__.py
include/: api_comm.hpp  asr_thread_pool.hpp  audio_processor.hpp  audio_queue.hpp  audio_recorder.hpp  ordered_audio_queue.hpp  streaming_audio_recorder.hpp  tts_demo.hpp
include/tts/: tts_config.hpp
spacemit_asr/models/: sensevoice_bin.py
src/: api_comm.cpp  asr_model.cpp  asr_thread_pool.cpp  audio_processor.cpp  audio_queue.cpp  audio_recorder.cpp  main_ase.cpp  main_asr.cpp  main_asr_correct.cpp  main_asr_llm_tts.cpp  main_asr_llm_tts_api.cpp  main_fc.cpp  main_llm.cpp  main_streaming_asr.cpp  main_tts.cpp  ordered_audio_queue.cpp  streaming_audio_recorder.cpp  text_buffer.cpp  tts_demo.cpp
src/tts/: tts_model.cpp  tts_model_downloader.cpp
